# Drug_cabinet

./: .env.example  .gitignore  history_database_backup.sql  mqtt_database_backup.sqlup.sql  nginx_optimized.conf  web_database_backup.sqlup.sql  传感层架构图.drawio  域名配置说明.md  整体执行模块的引脚连接图.drawio  流程图.drawio  用户用例图.drawio  系统应用层架构图.drawio  系统总体结构图.drawio
Drug_cabinet_MP/: README.md  app.js  app.json  app.wxss  project.config.json
Drug_cabinet_server/: admin_alarm_log.py  admin_dashboard.py  admin_drug_catalogue.py  admin_drug_input_output.py  admin_drug_log.py  admin_env_log.py  admin_equip_config.py  admin_equip_montior.py  admin_equip_ota.py  admin_user_config.py  admin_user_log.py  admin_user_profile.py  alarm_handler.py  config.py  create_batch_import_record.sql  create_remote_operation_monitor.sql  db_cache_sync.py  development_progress.txt  emqx_manager.py  generate_demo_excel.py  login.py  main.py  permission_manager.py  redis_manager.py  requirements.txt  student_drug_BOR_RET.py  student_drug_catalogue.py  teacher_drug_BND_UBD.py  teacher_drug_BOR_RET.py  teacher_drug_catalogue.py  药品导入模板.xlsx
Drug_cabinet_server/templates/: admin_alarm_log.html  admin_dashboard.html  admin_drug_catalogue.html  login.html  (+9 more)
ESP32WROOM/: CMakeLists.txt  partitions.csv
ESP32WROOM/main/: CMakeLists.txt  action_functions.c  action_functions.h  alarm_manager.c  alarm_manager.h  config.h  main.c  mqtt_listener.c  mqtt_listener.h  mqtt_ota_handler.c  mqtt_ota_handler.h  uart_manager.c  uart_manager.h  wifi_manager.c  wifi_manager.h
drug/: .mxproject  development_progress.txt  drug.ioc
(+177 files in other folders)
